# escoffier

./: .gitignore  CLAUDE.md  CLEAN-UP-PLAN.md  GIT-COMMIT.md  LICENSE  Makefile  README.md  compose.yaml  eslint.config.mjs  jest.config.mjs  package-lock.json  package.json  test.html
.github/: issue-contentblock-bug.md
.github/workflows/: allow-feature-hotfix-merge.yml  allow-hotfix-merge.yml  feature-bugfix-merge.yml  hotfix-merge.yml
app/: globals-SAVE.css  globals.css  layout.tsx  page.tsx
app/contexts/: ShoppingListContext.tsx
app/glossary/: page.tsx
app/index/: page.tsx
app/shopping-list/: layout.tsx  page.tsx
components/: AlphabetFilter.tsx  Chapter.tsx  ContentBlockList.tsx  DataLoadError.tsx  EditEntryModal.tsx  Entry.tsx  EntryText.tsx  Glossary.tsx  Header.tsx  Index.tsx  Section.tsx  TableOfContents.tsx
components/buttons/: CopyButton.tsx  CopyIcon.tsx  PencilIcon.tsx  (+1 more)
data/: chapter-entry-dictionary.ts  contents.json  cookbook.json  glossary-deepseek.json  glossary.json  index.json  validate-date.js
functions/: apiClient.ts  createChapterTOC.ts  createCookbookTOC.ts  extractEntryNumbers.ts  generateSlug.ts  getData.ts  replaceFormulasWithRecipes.ts
scripts/: convert-chapter-entry-to-JSON.awk  extractRecipes.bash  fix-chapter-ii-introductions.js  fix_techniques.py  migrate-to-mongo.mjs  replaceFormulasWithRecipes.js  replaceFormulasWithRecipes.md  validate-chapter-ii.js  validate-chapter.mjs
server/: pyproject.toml
server/app/: db.py  main.py
types/: ShoppingListItemType.ts  ShoppingListType.ts  TableOfContentsItemType.ts
(+95 files in other folders)
