[project]
name = "escoffier-server"
version = "0.1.0"
description = "FastAPI server exposing the Escoffier cookbook data from MongoDB"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "motor>=3.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
native-tls = true

[tool.pytest.ini_options]
testpaths = ["../tests/server"]
addopts = "-ra"
